// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PaginationCounter /> check if correct text render should be 1 - 1 of 1 order 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #777;
  font-size: 1.3rem;
}

<span
    class="c0"
    color="#777"
    data-testid="PaginationCounter"
    display="inline-block"
    overflow="visible"
    size="1"
    spacing="0px"
    transform=""
  >
    1 - 1 of 1 order
  </span>
</DocumentFragment>
`;

exports[`<PaginationCounter /> check if correct text render should be 1 - 1 of 1 products 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #777;
  font-size: 1.3rem;
}

<span
    class="c0"
    color="#777"
    data-testid="PaginationCounter"
    display="inline-block"
    overflow="visible"
    size="1"
    spacing="0px"
    transform=""
  >
    1 - 1 of 1 product
  </span>
</DocumentFragment>
`;

exports[`<PaginationCounter /> check if correct text render should be 1 - 1 of 10 orders 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #777;
  font-size: 1.3rem;
}

<span
    class="c0"
    color="#777"
    data-testid="PaginationCounter"
    display="inline-block"
    overflow="visible"
    size="1"
    spacing="0px"
    transform=""
  >
    1 - 1 of 10 orders
  </span>
</DocumentFragment>
`;

exports[`<PaginationCounter /> check if correct text render should be 1 - 2 of 5 products 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #777;
  font-size: 1.3rem;
}

<span
    class="c0"
    color="#777"
    data-testid="PaginationCounter"
    display="inline-block"
    overflow="visible"
    size="1"
    spacing="0px"
    transform=""
  >
    1 - 2 of 5 products
  </span>
</DocumentFragment>
`;

exports[`<PaginationCounter /> check if correct text render should be 3 - 4 of 5 products 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #777;
  font-size: 1.3rem;
}

<span
    class="c0"
    color="#777"
    data-testid="PaginationCounter"
    display="inline-block"
    overflow="visible"
    size="1"
    spacing="0px"
    transform=""
  >
    3 - 4 of 5 products
  </span>
</DocumentFragment>
`;

exports[`<PaginationCounter /> check if correct text render should be 5 - 7 of 7 orders 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #777;
  font-size: 1.3rem;
}

<span
    class="c0"
    color="#777"
    data-testid="PaginationCounter"
    display="inline-block"
    overflow="visible"
    size="1"
    spacing="0px"
    transform=""
  >
    5 - 7 of 7 orders
  </span>
</DocumentFragment>
`;

exports[`<PaginationCounter /> check if correct text render should be 10 - 10 of 10 orders 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #777;
  font-size: 1.3rem;
}

<span
    class="c0"
    color="#777"
    data-testid="PaginationCounter"
    display="inline-block"
    overflow="visible"
    size="1"
    spacing="0px"
    transform=""
  >
    10 - 10 of 10 orders
  </span>
</DocumentFragment>
`;
